--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -440,6 +440,27 @@ p {
   color: #fff;
 }
 
+.btn {
+  display: inline-block;
+  background-color: #007bff;
+  color: #fff;
+  font-size: 16px;
+  padding: 10px 20px;
+  border-radius: 5px;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+  opacity: 0.3;
+}
+
+.btn:hover {
+  background-color: #0069d9;
+  opacity: 0.8;
+}
+
+.bi.bi-cloud-download {
+  margin-right: 5px;
+}
+
 .homehome-content p {
   font-size: 13px;
   letter-spacing: 3px;
